<resources>
    <string name="app_name">Screener-Template</string>

    <!-- Arrays -->
    <string-array name="age_array">
        <item>N/A</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
    </string-array>
    <string-array name="ethnicity_array">
        <item>N/A</item>
        <item>American Indian</item>
        <item>Asian</item>
        <item>Black</item>
        <item>Hispanic</item>
        <item>Pacific Islander</item>
        <item>White</item>
        <item>Other</item>
        <item>Multiple Ethnicities</item>
    </string-array>
    <string-array name="no_yes_array">
        <item>No</item>
        <item>Yes</item>
    </string-array>
    <string-array name="state_array">
        <item>N/A</item>
        <item>Not in U.S.</item>
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>

    <!-- Buttons -->
    <string name="continueButton_string">Continue</string>
    <string name="femaleButton_string">Start Female Screening</string>
    <string name="maleButton_string">Start Male Screening</string>
    <string name="noButton_string">No</string>
    <string name="restartButton_string">Restart</string>
    <string name="returnButton_string">Return</string>
    <string name="unknownButton_string">Unknown</string>
    <string name="websiteButton_string">Visit Website</string>
    <string name="yesButton_string">Yes</string>

    <!-- Options Menu-->
    <string name="aboutOption_string">About Us</string>
    <string name="contactOption_string">Contact</string>
    <string name="privacyOption_string">Privacy Policy</string>

    <!-- TextViews -->
    <string name="ageTextView_string">Age</string>
    <string name="agencyTextView_string">[PLACEHOLDER]</string>
    <string name="assaultTextView_string">[PLACEHOLDER]</string>
    <string name="bannerTextView_string">[PLACEHOLDER]</string>
    <string name="cityTextView_string">City</string>
    <string name="copyrightTextView_string">[COPYRIGHT INFO]</string>
    <string name="juvenileTextView_string">[PLACEHOLDER]</string>
    <string name="raceTextView_string">Ethnicity</string>
    <string name="scoreTextView_string">Score: </string>
    <string name="socialTextView_string">[PLACEHOLDER]</string>
    <string name="stateTextView_string">State</string>
</resources>
