<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_information_two"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_margin"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin"
    tools:context="deecee.screener_template.InfoTwoActivity">

    <TextView
        android:id="@+id/infoTwo_juvenileTextView"
        android:text="@string/juvenileTextView_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Spinner
        android:id="@+id/infoTwo_juvenileSpinner"
        android:entries="@array/no_yes_array"
        android:layout_below="@+id/infoTwo_juvenileTextView"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/infoTwo_socialTextView"
        android:text="@string/socialTextView_string"
        android:layout_below="@+id/infoTwo_juvenileSpinner"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Spinner
        android:id="@+id/infoTwo_socialSpinner"
        android:entries="@array/no_yes_array"
        android:layout_below="@+id/infoTwo_socialTextView"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/infoTwo_assaultTextView"
        android:text="@string/assaultTextView_string"
        android:layout_below="@+id/infoTwo_socialSpinner"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Spinner
        android:id="@+id/infoTwo_assaultSpinner"
        android:entries="@array/no_yes_array"
        android:layout_below="@+id/infoTwo_assaultTextView"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/infoTwo_agencyTextView"
        android:text="@string/agencyTextView_string"
        android:layout_below="@+id/infoTwo_assaultSpinner"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:id="@+id/infoTwo_agencyEditText"
        android:inputType="text"
        android:maxLength="24"
        android:ems="10"
        android:layout_below="@id/infoTwo_agencyTextView"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:id="@+id/infoTwo_maleButton"
        android:text="@string/maleButton_string"
        android:layout_marginBottom="82dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/infoTwo_femaleButton"
        android:text="@string/femaleButton_string"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/infoTwo_copyrightTextView"
        android:text="@string/copyrightTextView_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
