<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_info_one"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_margin"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin"
    tools:context="deecee.screener_template.InfoOneActivity">

    <TextView
        android:id="@+id/infoOne_ageTextView"
        android:text="@string/ageTextView_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Spinner
        android:id="@+id/infoOne_ageSpinner"
        android:entries="@array/age_array"
        android:layout_below="@+id/infoOne_ageTextView"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/infoOne_raceTextView"
        android:text="@string/raceTextView_string"
        android:layout_below="@+id/infoOne_ageSpinner"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Spinner
        android:id="@+id/infoOne_raceSpinner"
        android:entries="@array/ethnicity_array"
        android:layout_below="@+id/infoOne_raceTextView"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/infoOne_stateTextView"
        android:text="@string/stateTextView_string"
        android:layout_below="@+id/infoOne_raceSpinner"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Spinner
        android:id="@+id/infoOne_stateSpinner"
        android:entries="@array/state_array"
        android:layout_below="@+id/infoOne_stateTextView"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/infoOne_cityTextView"
        android:text="@string/cityTextView_string"
        android:layout_below="@+id/infoOne_stateSpinner"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:id="@+id/infoOne_cityEditText"
        android:inputType="text"
        android:maxLength="24"
        android:ems="10"
        android:layout_below="@id/infoOne_cityTextView"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:id="@+id/infoOne_continueButton"
        android:text="@string/continueButton_string"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/infoOne_copyrightTextView"
        android:text="@string/copyrightTextView_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
